Retirando o GET Ranking
