# src/routes/JogadorRoutes.ts
@@ -8,7 +8,7 @@ router.post('/jogadores', jogadorController.create);
 router.get('/jogadores', jogadorController.findAll);
 router.get('/jogadores/:id', jogadorController.findOne);
 router.delete('/jogadores/:id', jogadorController.delete);
-router.get('/jogadores/ranking', jogadorController.getRanking);
+
 
 // Novas rotas para listagem em PDF
 router.get('/jogadores/gols/desc/pdf', jogadorController.listarPorGolsDecrescentePDF);
